# bsb4_pi

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  bsb4-plugin.xml.in
.circleci/: config.yml
buildosx/InstallOSX/: bsb4_pi.pkgproj.in
ci/: bintray.js  circleci-build-fedora.sh  circleci-build-flatpak.sh  circleci-build-macos.sh  circleci-build-mingw.sh  circleci-upload.sh  docker-build-flatpak.sh  travis-build-debian.sh  travis-upload.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginPackage.cmake
flatpak/: Makefile  README.md  org.opencpn.OpenCPN.Plugin.bsb4.yaml
src/: bsb4_pi.cpp  bsb4_pi.h  chart.cpp  chart.h  ellipse.c  version.h
